Hadoop barclamp bug fixes: DE244 - FIXED - Oracle JVM is not installed on the compute nodes. DE219 - FIXED - Description for Hadoop barclamp references ecosystem components.

--- a/chef/cookbooks/hadoop/README.rdoc
+++ b/chef/cookbooks/hadoop/README.rdoc
@@ -1,6 +1,6 @@
 = DESCRIPTION:
 
-Installs and Configures a hadoop cluster.
+Installs and configures the baseline hadoop cluster component (HDFS/Map Reduce).
 
 = REQUIREMENTS:
 
