Added code conditionals around the hadoop-env.sh template export calls in case values are unset or empty. Improved code documentation.

--- a/chef/cookbooks/hadoop/README.rdoc
+++ b/chef/cookbooks/hadoop/README.rdoc
@@ -33,4 +33,6 @@ persistent data storage).
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# Author: Paul Webster
+#
  
